# flask-microservice

./: README.md  app.py  pyproject.toml
tests/: test_api.py
