[tool.poetry]
name = "flask-microservice"
version = "0.1.0"
description = ""
authors = ["Olivia Telles <alma.telles@lytica.ai>"]
readme = "README.md"
packages = [{include = "flask_microservice"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
